--- a/video-player/src/app/app.component.html
+++ b/video-player/src/app/app.component.html
@@ -2,7 +2,11 @@
 
 <main class="main h-screen w-full flex items-center justify-center">
   <div class="flex flex-col items-center justify-center w-1/4 h-full">
-    <history></history>
+    <history
+      [historyList]="historyList"
+      (selectHistory)="onHistorySelected($event)"
+      (deleteHistory)="onHistoryDeleted($event)"
+    ></history>
   </div>
   <div class="flex flex-col items-center justify-center w-3/4 h-full">
     <searchbar (videoAdded)="onVideoAdded($event)"></searchbar>
