--- a/video-player/src/app/app.component.html
+++ b/video-player/src/app/app.component.html
@@ -11,7 +11,10 @@
   <div class="flex flex-col items-center justify-center w-3/4 h-full">
     <searchbar (videoAdded)="onVideoAdded($event)"></searchbar>
     <video-view [videoUrl]="videoUrl"></video-view>
-    <bookmarks></bookmarks>
+    <bookmarks
+      [currentVideo]="{ url: videoUrl, name: videoUrl }"
+      (playVideo)="onBookmarkSelect($event)"
+    ></bookmarks>
   </div>
 </main>
 
