--- a/video-player/src/app/app.component.html
+++ b/video-player/src/app/app.component.html
@@ -1,14 +1,12 @@
-<style></style>
-
-<main class="main h-screen w-full flex items-center justify-center">
-  <div class="flex flex-col items-center justify-center w-1/4 h-full">
+<main class="main h-auto w-full flex transition-transform duration-300">
+  <div>
     <history
       [historyList]="historyList"
       (selectHistory)="onHistorySelected($event)"
       (deleteHistory)="onHistoryDeleted($event)"
     ></history>
   </div>
-  <div class="flex flex-col items-center justify-center w-3/4 h-full">
+  <div class="flex-1">
     <searchbar (videoAdded)="onVideoAdded($event)"></searchbar>
     <video-view [videoUrl]="videoUrl"></video-view>
     <bookmarks
@@ -18,4 +16,4 @@
   </div>
 </main>
 
-<router-outlet />
+<router-outlet></router-outlet>
