--- a/video-player/src/app/components/history/history.component.html
+++ b/video-player/src/app/components/history/history.component.html
@@ -1,8 +1,24 @@
-<div class="p-4 bg-gray-50 rounded w-full h-full shadow flex flex-col">
-  <h2 class="text-lg font-bold text-gray-700 mb-4">History</h2>
+<div
+  class="p-4 bg-gray-50 rounded h-full shadow flex flex-col"
+  [ngClass]="{ 'w-32': !isSidebarOpen, 'w-96': isSidebarOpen }"
+>
+  <button
+    mat-mini-fab
+    aria-label="Example icon button with a menu icon"
+    (click)="onToggleSidebar()"
+  >
+    <mat-icon>menu</mat-icon>
+  </button>
+
+  <h2
+    class="text-lg font-bold text-gray-700 mb-4 w-full text-center"
+    [ngClass]="{ hidden: !isSidebarOpen }"
+  >
+    History
+  </h2>
 
   @if(historyList.length > 0){
-  <ul class="space-y-2 overflow-auto">
+  <ul class="space-y-2 overflow-auto" [ngClass]="{ hidden: !isSidebarOpen }">
     <li
       *ngFor="let item of historyList; let i = index"
       class="p-2 bg-white rounded shadow flex justify-between items-center"
@@ -35,7 +51,10 @@
     </li>
   </ul>
   } @else {
-  <div class="flex-1 flex items-center justify-center">
+  <div
+    class="flex-1 flex items-center justify-center"
+    [ngClass]="{ hidden: !isSidebarOpen }"
+  >
     <p class="text-gray-500 text-sm">Without History</p>
   </div>
   }
