--- a/video-player/src/app/components/video-view/video-view.component.html
+++ b/video-player/src/app/components/video-view/video-view.component.html
@@ -1,17 +1,16 @@
-<div class="p-4 bg-gray-50 rounded w-full h-full">
+<div class="p-4 bg-gray-50 rounded w-full h-auto">
+  <h1>Youtube Video Player</h1>
   @if(videoId){
-  <div>
+  <div class="w-full h-auto flex items-center justify-center">
     <iframe
       [src]="videoUrl"
-      width="100%"
-      height="360"
       frameborder="0"
       allowfullscreen
-      class="rounded shadow"
+      class="rounded shadow w-11/12 aspect-video"
     ></iframe>
   </div>
   } @else {
-  <div class="flex items-center justify-center h-36 bg-gray-200 rounded">
+  <div class="flex items-center justify-center w-full h-96 bg-gray-200 rounded">
     <p class="text-gray-500">No video selected</p>
   </div>
   }
