[feat] services history and integrated

--- a/video-player/src/app/app.component.html
+++ b/video-player/src/app/app.component.html
@@ -10,6 +10,7 @@
     <searchbar (videoAdded)="onVideoAdded($event)"></searchbar>
     <video-view [videoUrl]="videoUrl"></video-view>
     <bookmarks
+      [bookmarkList]="bookmarkList"
       [currentVideo]="{ url: videoUrl, name: videoUrl }"
       (playVideo)="onBookmarkSelect($event)"
     ></bookmarks>
