--- a/video-player/src/app/components/history/history.component.html
+++ b/video-player/src/app/components/history/history.component.html
@@ -42,7 +42,7 @@
           Play
         </button>
         <button
-          (click)="onDeleteHistory(i)"
+          (click)="onDeleteHistory(item)"
           class="px-2 py-1 text-sm text-white bg-red-500 rounded hover:bg-red-600 transition"
         >
           Delete
