--- a/video-player/src/app/components/searchbar/searchbar.component.html
+++ b/video-player/src/app/components/searchbar/searchbar.component.html
@@ -1,4 +1,6 @@
-<h1 class="flex items-center gap-4 p-4 bg-gray-100 rounded center-text">
+<h1
+  class="flex items-center gap-4 p-4 bg-gray-100 rounded text-center font-bold text-4xl"
+>
   Youtube Video Player
 </h1>
 <div class="flex items-center gap-4 p-4 bg-gray-100 rounded">
@@ -16,8 +18,9 @@
   />
   <button
     (click)="addVideo()"
-    class="px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-600"
+    class="px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-400 flex items-center justify-center"
   >
+    <mat-icon>add</mat-icon>
     Add Video
   </button>
 </div>
