--- a/video-player/src/app/components/bookmarks/bookmarks.component.html
+++ b/video-player/src/app/components/bookmarks/bookmarks.component.html
@@ -1,12 +1,14 @@
 <div class="p-4 bg-gray-100 rounded shadow">
   <div class="flex justify-between items-center mb-4 text-center">
     <h3 class="text-lg font-semibold text-center">Bookmarks</h3>
-    <span class="text-sm text-gray-700">Total: {{ bookmarkList.length }}</span>
+    <span class="text-gray-700 text-lg font-semibold"
+      >Total: {{ bookmarkList.length }}</span
+    >
   </div>
-  <div class="flex justify-between mb-4">
+  <div class="flex justify-between mb-4 space-x-2">
     <button
       (click)="addBookmark()"
-      class="w-1/2 py-2 px-2 text-sm bg-blue-500 text-white rounded hover:bg-blue-600 transition"
+      class="w-1/2 py-2 px-2 text-sm bg-blue-500 text-white rounded hover:bg-blue-400 transition"
       [disabled]="!currentVideo"
     >
       Add Bookmark
@@ -19,12 +21,10 @@
       {{ showBookmarks ? "Close Bookmarks" : "Open Bookmarks" }}
     </button>
   </div>
-  @if(showBookmarks){
+  @if (showBookmarks) {
   <ul class="mt-4 space-y-2 overflow-auto max-h-60 bg-white p-2 rounded">
-    <li
-      *ngFor="let bookmark of bookmarkList; let i = index"
-      class="p-2 bg-gray-50 rounded shadow flex justify-between items-center"
-    >
+    @for (bookmark of bookmarkList; track $index) {
+    <li class="p-2 bg-gray-50 rounded shadow flex justify-between items-center">
       <div>
         <p class="text-sm font-medium text-gray-800">{{ bookmark.name }}</p>
         <a
@@ -39,18 +39,19 @@
       <div class="flex space-x-2">
         <button
           (click)="onSelectBookmark(bookmark.url, bookmark.name, bookmark.id)"
-          class="px-2 py-1 text-sm text-white bg-green-500 rounded hover:bg-green-600 transition"
+          class="p-2 text-sm text-white flex items-center justify-center bg-slate-300 rounded hover:bg-slate-400 transition"
         >
-          Play
+          <mat-icon class="text-blue-400">skip_next</mat-icon>
         </button>
         <button
           (click)="onDeleteBookmark(bookmark)"
-          class="px-2 py-1 text-sm text-white bg-red-500 rounded hover:bg-red-600 transition"
+          class="p-2 text-sm text-white flex items-center justify-center bg-slate-300 rounded hover:bg-slate-400 transition"
         >
-          Delete
+          <mat-icon class="text-red-400">delete</mat-icon>
         </button>
       </div>
     </li>
+    }
   </ul>
   }
 </div>
